--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 /*  ID CARD */
 .id-card {
     width: calc(100% - 40px);
-    height: 354px;
+    height: 369px;
     border: 4px solid #000;
     border-radius: 10px;
     box-shadow: 0 0 0 4px #fff, 0 0 0 8px #000;
@@ -355,8 +355,8 @@ body {
 #character {
   position: absolute;
   bottom: 60px;
-  left: 250px;
-  transform: translateX(-16px);
+  left: 50%;
+  transform: translateX(-50%);
   transition: bottom 0.5s;
   z-index: 10;
 }
@@ -547,6 +547,39 @@ body {
   .id-card {
     height: 250px;
     gap: 15px;
+  }
+
+  #playBtn {
+    display: none;
+  }
+  
+  .button-container {
+    gap: 0;
+  }
+  
+  #watchBtn {
+    margin: 0 auto;
+  }
+
+  .game-container {
+    height: 250px;
+  }
+  
+  #character {
+    bottom: 40px;
+  }
+  
+  #character.jump {
+    bottom: 120px;
+  }
+  
+  .hurdle {
+    bottom: 40px;
+    height: 30px;
+  }
+  
+  .ground {
+    height: 40px;
   }
 }
 
